[gd_scene load_steps=7 format=3 uid="uid://d2dsqx38l6yqc"]

[ext_resource type="PackedScene" uid="uid://dbl3r8426473v" path="res://sources/language_tool/plus_button.tscn" id="1_kgjbj"]
[ext_resource type="Script" path="res://sources/language_tool/tracing_builder.gd" id="1_rm5fr"]
[ext_resource type="Texture2D" uid="uid://5n02dxd66fw4" path="res://assets/menus/save_button.png" id="3_2sbjh"]
[ext_resource type="Texture2D" uid="uid://cw15lg6j37pvj" path="res://assets/menus/back_button.png" id="4_83j0b"]
[ext_resource type="PackedScene" uid="uid://bvb8iewnsnsoj" path="res://sources/language_tool/segment_container.tscn" id="4_frjng"]

[sub_resource type="Gradient" id="Gradient_1lmt0"]
offsets = PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.983333, 0, 1, 0, 1, 0.0833333, 1, 0, 0.983334, 1, 1, 0.028, 0, 0.84, 1, 0.566667, 0, 1, 1, 1, 0, 0.716667, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 6

[node name="TracingBuilder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rm5fr")
gradient = SubResource("Gradient_1lmt0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 128
text = "Tracing Builder"

[node name="Help" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
text = "- Right click to add and move points
- Left click on a point to delete it
- Save to move to the next letter"

[node name="SaveButton" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer2" instance=ExtResource("1_kgjbj")]
layout_mode = 2

[node name="TextureRect" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer2/SaveButton" index="0"]
texture = ExtResource("3_2sbjh")

[node name="BackButton" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer2" instance=ExtResource("1_kgjbj")]
layout_mode = 2

[node name="TextureRect" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer2/BackButton" index="0"]
texture = ExtResource("4_83j0b")

[node name="LowerContainer" parent="VBoxContainer" instance=ExtResource("4_frjng")]
unique_name_in_owner = true
layout_mode = 2

[node name="UpperContainer" parent="VBoxContainer" instance=ExtResource("4_frjng")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer2/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]

[editable path="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer2/SaveButton"]
[editable path="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer2/BackButton"]
